<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="pref_location_key" translatable='false'>location</string>
    <string name="pref_temperature_key" translatable='false'>temperature</string>
    <string name="pref_temperature_title">Temperature units</string>
    <string-array name="pref_temperature_entries">
        <item>Celsius</item>
        <item>Farenheit</item>
    </string-array>
    <string-array name="pref_temperature_entryValues">
        <item>celsius</item>
        <item>farenheit</item>
    </string-array>
    <string name="pref_temperature_default">celsius</string>
    <string name="button_location">Location</string>
    <string name="action_share">Share</string>
</resources>
