<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"
        android:cursorVisible="true"/>

    <ListPreference
        android:key="@string/pref_temperature_key"
        android:title="@string/pref_temperature_title"
        android:entries="@array/pref_temperature_entries"
        android:entryValues="@array/pref_temperature_entryValues"
        android:defaultValue="@string/pref_temperature_default"
        />
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
</PreferenceScreen>
